This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
12/10/23: Added hole finder option to use just a subset of holes at 1 micron
spacing on a hex grid.

12/9/23: Fixed bugs in combining hex grid items.

12/9/23: Fixed display and acquisition of combined hex grid items if number of
rings is changed in dialog.

12/8/23: Fixed recording custom multishot pattern, broken 9/27.

12/8/23: Fixed IS calibration not properly stopping on two error conditions
and requiring program to be exited.

12/8/23: Added menu item for selecting a script to run instead of taking
Record in Multiple Records run from Acquire at Items.

12/8/23: Fixed argument lists for 12 scrpit commands if called from Python and
some various problems in script help.

12/8/23: Added support for STEM with Tietz scan generator.

12/8/23: Fixed a crash when using ctffind from PACEtomo (new package needed).

12/8/23: Fixed crash combining with non-square pattern (In 4.0).

12/4/23: Fixed optional arguments to CombineHolesToMulti when called from
Python.

12/1/23: Fixed detection of lack of hardware binning and ROI for DE cameras,
broken in beta26.

11/30/23: Made restoring of window positions work properly when there are two
monitors with the primary one on the right; fixed reopening program maximized.

11/30/23: SEM_4-1-0beta26
11/30/23: Fixed saving of frame mdoc for multishots with early returns.

11/30/23: DE code and DLL updated to work with 2.7 server; API 2 can now be
used with 2.7 but not earlier servers and gives fast continuous mode.

11/30/23: Made TakeUnbinnedIfSavingEER be on by default.

11/30/23: Stopped updating log file on each tilt during batch tilt series.

11/30/23: Added script command to report last shift in shift to marker and