@@ -559,7 +559,7 @@ MAC_SAME_NAME_ARG(AlignAndTransformItems, 2, 0, ALIGNANDTRANSFORMITEMS, DDd)
 MAC_SAME_NAME_NOARG(ForceCenterRealign, 0, 4, FORCECENTERREALIGN)
 MAC_SAME_NAME_ARG(SkipPiecesOutsideItem, 1, 4, SKIPPIECESOUTSIDEITEM, I)
 MAC_SAME_NAME_ARG(FindHoles, 0, 0, FINDHOLES, s)
-MAC_SAME_NAME_ARG(MakeNavPointsAtHoles, 0, 4, MAKENAVPOINTSATHOLES, iddddd)
+MAC_SAME_NAME_ARG(MakeNavPointsAtHoles, 0, 4, MAKENAVPOINTSATHOLES, idddddi)
 MAC_SAME_NAME_NOARG(ClearHoleFinder, 0, 4, CLEARHOLEFINDER)
 MAC_SAME_NAME_ARG(CombineHolesToMulti, 1, 4, COMBINEHOLESTOMULTI, Iiii)
 MAC_SAME_NAME_NOARG(UndoHoleCombining, 0, 4, UNDOHOLECOMBINING)
@@ -763,6 +763,7 @@ MAC_SAME_NAME_ARG(SuppressInfoOutput, 0, 4, SUPPRESSINFOOUTPUT, i)
 MAC_SAME_NAME_ARG(FindSubstring, 3, 4, FINDSUBSTRING, SIS)
 MAC_SAME_NAME_ARG(OpenDialog, 1, 0, OPENDIALOG, S)
 MAC_SAME_NAME_NOARG(ReportLastMarkerShift, 0, 4, REPORTLASTMARKERSHIFT)
+MAC_SAME_NAME_ARG(SetMontPanelParams, 1, 4, SETMONTPANELPARAMS, Iiii)
 
 
 // new Python-only commands need to be added to pythonOnlyCmds in ::CMacroProcessor
