@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+12/11/23: Added script command to set montage control panel parameters.
+
+12/10/23: Fixed hex multishot pattern for 8 or more rings.
+
 12/10/23: Added hole finder option to use just a subset of holes at 1 micron
 spacing on a hex grid.
 
